# cocos2d-x

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
cocos/: CMakeLists.txt  cocos2d.h
cocos/2d/: CCCameraBackgroundBrush.cpp  CCCameraBackgroundBrush.h  CCEventMouse.h  CCFontAtlas.cpp  CCFontAtlasCache.cpp  CCLabel.cpp  CCNode.cpp  CCNode.h  CCTexture2D.cpp  CCTextureAtlas.cpp  CCUserDefault-ohos.cpp  CMakeLists.txt  ccUtils.cpp  ccUtils.h  cocos2d.h
cocos/2d/platform/: CCApplicationProtocol.h  CCCommon.h  CCFileUtils.cpp  CCFileUtils.h  CCImage.cpp
cocos/2d/platform/ohos/: CCApplication.cpp  CCApplication.h  CCCommon.cpp  CCDevice.cpp  CCFileUtils-ohos.cpp  CCFileUtils-ohos.h  CCGL.h  CCGLView.cpp  CCGLView.h  CCPlatformDefine.h  CCTextBitmap.cpp  CCTextBitmap.h
cocos/2d/renderer/: CCRenderer.cpp
cocos/3d/: CCTerrain.cpp  CCTerrain.h
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/audio/include/: AudioEngine.h
cocos/audio/ohos/: AssetFd.cpp  AssetFd.h  AudioBufferProvider.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioDecoderOgg.cpp  AudioDecoderOgg.h  AudioDecoderProvider.cpp  AudioDecoderProvider.h  AudioDecoderSLES.cpp  AudioDecoderSLES.h  AudioDecoderWav.cpp  AudioDecoderWav.h  AudioEngine-inl.cpp  AudioEngine-inl.h  AudioEngine.cpp  AudioEngine.h  AudioMixer.cpp  AudioMixer.h  AudioMixerController.cpp  AudioMixerController.h  AudioMixerOps.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h  AudioResampler.cpp  AudioResampler.h  AudioResamplerCubic.cpp  AudioResamplerCubic.h  AudioResamplerPublic.h  CCData.cpp  CCData.h  CCThreadPool.cpp  CCThreadPool.h  CMakeLists.txt  IAudioPlayer.h  ICallerThreadUtils.h  IVolumeProvider.h  Macros.h  (+17 more)
cocos/audio/ohos/audio_utils/: AudioEngine-ohos.h  AudioFileUtils.h  RefCounted.cpp  RefCounted.h  minifloat.cpp  primitives.cpp
cocos/audio/ohos/cutils/: bitops.h  log.h
cocos/audio/ohos/utils/: CCAudioFileUtilsOhos.cpp  Compat.h  Errors.h  Utils.cpp  Utils.h
cocos/base/: CCConfiguration.cpp  CCConsole.cpp  CCController-ohos.cpp  CCController.cpp  CCDirector.cpp  CCDirector.h  CCEventKeyboard.h  CCEventMouse.h  CCEventType.h  CCPlatformConfig.h  CCPlatformMacros.h  CCRefPtr.h  CCUserDefault-ohos.cpp  CMakeLists.txt  ccConfig.h  ccTypes.h
cocos/base/allocator/: CCAllocatorMutex.h
cocos/editor-support/cocosbuilder/: CCNodeLoader.cpp  CCNodeLoaderLibrary.cpp
cocos/editor-support/spine/: SkeletonJson.c
cocos/math/kazmath/kazmath/: CMakeLists.txt
cocos/network/: CCDownloader-curl.cpp  CMakeLists.txt  WebSocket.cpp  WebSocket.h
cocos/platform/: CCApplication.h  CCApplicationProtocol.h  CCCommon.h  CCDevice.h  CCFileUtils.cpp  CCFileUtils.h  CCGL.h  CCGLView.cpp  CCGLView.h  CCImage.cpp  CCImageCommon_cpp.h  CCPlatformConfig.h  CCPlatformDefine.h  CCPlatformMacros.h  CCStdC.h  CMakeLists.txt
cocos/platform/ohos/: CCApplication-ohos.cpp  CCApplication-ohos.h  CCApplication.cpp  CCApplication.h  CCCommon-ohos.cpp  CCCommon.cpp  CCDevice-ohos.cpp  CCDevice.cpp  CCFileUtils-ohos.cpp  CCFileUtils-ohos.h  CCGL-ohos.h  CCGL.h  CCGLView.cpp  CCGLView.h  CCGLViewImpl-ohos.cpp  CCGLViewImpl-ohos.h  CCImage.cpp  CCJsAudioEngine.cpp  CCLogOhos.h  CCPlatformDefine-ohos.h  CCPlatformDefine.h  CCStdC-ohos.h  CCStdC.h  CCTextBitmap.cpp  CCTextBitmap.h  JsAudioEngine.cpp  JsAudioEngine.h
cocos/platform/ohos/libSysCapabilities/: Readme.txt
cocos/platform/ohos/napi/: WorkerMessageQueue.cpp  WorkerMessageQueue.h  plugin_manager.cpp  plugin_manager.h
cocos/renderer/: CCGLProgram.cpp  CCGLProgramState.cpp  CCGLProgramState.h  CCMeshCommand.cpp  CCMeshCommand.h  CCRenderer.cpp  CCTexture2D.cpp  CCTextureAtlas.cpp  CCVertexIndexBuffer.cpp  CMakeLists.txt
cocos/renderer/backend/: ProgramState.cpp
cocos/renderer/backend/metal/: BufferMTL.mm  BufferManager.mm  CommandBufferMTL.mm  ProgramMTL.mm  ShaderModuleMTL.mm  TextureMTL.mm
cocos/renderer/backend/opengl/: BufferGL.cpp  ProgramGL.cpp  ShaderModuleGL.cpp
cocos/scripting/js-bindings/: CMakeLists.txt
cocos/scripting/js-bindings/auto/: jsb_cocos2dx_audioengine_auto.cpp  jsb_cocos2dx_audioengine_auto.hpp  jsb_cocos2dx_experimental_video_auto.cpp  jsb_cocos2dx_experimental_video_auto.hpp  jsb_cocos2dx_experimental_webView_auto.cpp  jsb_cocos2dx_experimental_webView_auto.hpp
cocos/scripting/js-bindings/manual/: ScriptingCore.cpp  js_module_register.cpp
cocos/scripting/js-bindings/script/: jsb_boot.js
cocos/scripting/lua-bindings/: CMakeLists.txt
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_audioengine_auto.cpp  lua_cocos2dx_audioengine_auto.hpp  lua_cocos2dx_auto.cpp  lua_cocos2dx_controller_auto.cpp  lua_cocos2dx_controller_auto.hpp  lua_cocos2dx_experimental_video_auto.cpp  lua_cocos2dx_experimental_video_auto.hpp  lua_cocos2dx_experimental_webview_auto.cpp  lua_cocos2dx_experimental_webview_auto.hpp  lua_cocos2dx_extension_auto.cpp  lua_cocos2dx_spine_auto.cpp  lua_cocos2dx_studio_auto.cpp  lua_cocos2dx_ui_auto.cpp
cocos/scripting/lua-bindings/manual/: CCLuaEngine.cpp  CCLuaStack.cpp  (+10 more)
cocos/storage/: CMakeLists.txt
cocos/storage/local-storage/: LocalStorage-ohos.cpp  LocalStorage.cpp
cocos/ui/: CMakeLists.txt  CocosGUI.h  UIHelper.cpp  UIHelper.h  UIVideoPlayer-ohos.cpp  UIVideoPlayer.h  UIWebView-inl.h  UIWebView.cpp  UIWebView.h  UIWebViewImpl-ohos.cpp  UIWebViewImpl-ohos.h
cocos/ui/UIEditBox/: UIEditBoxImpl-common.cpp  UIEditBoxImpl-common.h  UIEditBoxImpl-ohos.cpp  UIEditBoxImpl-ohos.h
cocos/ui/UIWebView/: UIWebView.cpp  UIWebViewImpl-ohos.cpp  UIWebViewImpl-ohos.h
extensions/: CMakeLists.txt
extensions/GUI/CCEditBox/: CCEditBoxImpl-common.cpp  CCEditBoxImpl-common.h  CCEditBoxImplOhos.cpp  CCEditBoxImplOhos.h
extensions/LocalStorage/: LocalStorage.cpp  LocalStorageOhos.cpp
extensions/Particle3D/PU/: CCPUMaterialManager.cpp
samples/Cpp/TestCpp/: CMakeLists.txt
scripting/lua/cocos2dx_support/: CCLuaStack.cpp  CMakeLists.txt  LuaCocos2d.cpp
tests/js-tests/project/: CMakeLists.txt
tests/lua-empty-test/project/: CMakeLists.txt
tests/lua-tests/project/: CMakeLists.txt
(+451 files in other folders)
